welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:18: error: not found: value getMondeHauteur
  var taille = getMondeHauteur()
               ^withoutDoubles:21: error: not found: value getCouleurSol
    T(i)=getCouleurSol()
         ^withoutDoubles:22: error: not found: value avance
    avance()
    ^withoutDoubles:24: error: not found: value getMondeLargeur
  var largeur = getMondeLargeur();
                ^withoutDoubles:25: error: not found: value left
  left(); avance();right(); 
  ^withoutDoubles:25: error: not found: value avance
  left(); avance();right(); 
          ^withoutDoubles:25: error: not found: value right
  left(); avance();right(); 
                   ^withoutDoubles:27: error: not found: value avance
    avance()
    ^withoutDoubles:32: error: not found: value baisseBrosse
  baisseBrosse()
  ^withoutDoubles:33: error: not found: value leveBrosse
  leveBrosse()
  ^withoutDoubles:37: error: not found: value taille
  for (i<- 0 to taille-1){
                ^withoutDoubles:38: error: not found: value setCouleurBrosse
   setCouleurBrosse(T(i));
   ^withoutDoubles:38: error: not found: value T
   setCouleurBrosse(T(i));
                    ^withoutDoubles:40: error: not found: value avance
   avance();
   ^